Fix Name spacing

--- a/portfolio/src/Components/Style/Home.scss
+++ b/portfolio/src/Components/Style/Home.scss
@@ -40,6 +40,7 @@
       font-size: larger;
       color: palette.$charcoal;
       margin-bottom: 0;
+      margin-top: 16px;
       width: 70%;
       padding-bottom: 10px;
       border-bottom: 0.5px solid palette.$melon;
